--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/bakedspaghetti.html">Baked Spaghetti</a>
+        <ul>
+            <li><a href="./recipes/bakedspaghetti.html">Baked Spaghetti</a></li>
+            <li><a href="./recipes/raspberryblackberry.html">Raspberry Blackberry Smoothie</a></li>
+            <li><a href="./recipes/focacciapanzanella.html">Focaccia Panzanella</a></li>
+        </ul>
     </body>
 </html>
