--- a/recipes/focacciapanzanella.html
+++ b/recipes/focacciapanzanella.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Focaccia Panzanella</h1>
-        <img href="./images/focacciapanzanella.jpg" alt="A Completed Focaccia Panzanella">
+        <img src="./images/focacciapanzanella.jpg" alt="A Completed Focaccia Panzanella" width="800" height="600">
 
         <h4>Description:</h4>
         <p>We are making this ancient and amazing Tuscan salad using a bread from Liguria. I'm guessing neither region would be crazy about this idea, but any geo-culinary issues aside, this salad is the ultimate way to use up fresh summer tomatoes and leftover bread.</p>
