--- a/recipes/raspberryblackberry.html
+++ b/recipes/raspberryblackberry.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Raspberry Blackberry Smoothie</h1>
-        <img href="./images/raspberryblackberry.jpg" alt="Raspberry Blackberry Smoothie">
+        <img src="./images/raspberryblackberry.jpg" alt="Raspberry Blackberry Smoothie">
         <h4>Description:</h4>
         <p>A delicious smoothie!</p>
 
