--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <img src="./recipes/images/main.jpg" alt="A recipe book"> 
+        <h2>Select Your Next Recipe Below!</h2>
         <ul>
             <li><a href="./recipes/bakedspaghetti.html">Baked Spaghetti</a></li>
             <li><a href="./recipes/raspberryblackberry.html">Raspberry Blackberry Smoothie</a></li>
