Return to Home link

--- a/recipes/raspberryblackberry.html
+++ b/recipes/raspberryblackberry.html
@@ -25,5 +25,6 @@
         <ol>
             <li>Place banana, blackberries, raspberries, yogurt, honey, and ice cubes into a blender. Blend until smooth.</li>
         </ol>
+        <a href="../index.html">Return to the Main Page</a>
     </body>
 </html>
