--- a/recipes/bakedspaghetti.html
+++ b/recipes/bakedspaghetti.html
@@ -35,5 +35,7 @@
             <li>Place 1/2 of the spaghetti mixture in the prepared dish. Top with 1/2 of the cottage cheese, 2 cups mozzarella, and 1/2 of meat sauce. Repeat layers. Cover with aluminum foil.</li>
             <li>Bake in the preheated oven for 40 minutes. Remove the foil and sprinkle with remaining mozzarella. Continue to bake until cheese is melted and lightly browned, 20 to 25 minutes.</li>
         </ol>
+
+        <a href="../index.html">Return to the Main Page</a>
     </body>
 </html>
