--- a/recipes/focacciapanzanella.html
+++ b/recipes/focacciapanzanella.html
@@ -37,5 +37,6 @@
             <li>Toss vine-ripened tomatoes, cherry tomatoes, salt, and pepper into the dressing with a spatula. Let sit for 10 minutes.</li>
             <li>Add mozzarella and red onion to the tomato mixture and toss with a spatula to combine. Add bread cubes and mix until saturated as desired. Mix in basil. Taste for seasoning before serving.</li>
         </ol>
+        <a href="../index.html">Return to the Main Page</a>
     </body>
 </html>
