--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>iJonezi | Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <img src="./recipes/images/main.jpg" alt="A recipe book"> 
-        <h2>Select Your Next Recipe Below!</h2>
-        <ul>
-            <li><a href="./recipes/bakedspaghetti.html">Baked Spaghetti</a></li>
-            <li><a href="./recipes/raspberryblackberry.html">Raspberry Blackberry Smoothie</a></li>
-            <li><a href="./recipes/focacciapanzanella.html">Focaccia Panzanella</a></li>
-        </ul>
+        <h1 class="title-text">Odin Recipes</h1>
+        <img class="main-img" src="./recipes/images/main.jpg" alt="A recipe book"> 
+        <div class="recipes">
+            <h2>Select Your Next Recipe Below!</h2>
+            <p><a href="./recipes/bakedspaghetti.html">Baked Spaghetti</a></p>
+            <p><a href="./recipes/raspberryblackberry.html">Raspberry Blackberry Smoothie</a></p>
+            <p><a href="./recipes/focacciapanzanella.html">Focaccia Panzanella</a></p>
+        </div>
     </body>
 </html>
