--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1 class="title-text">Odin Recipes</h1>
+        <h1>Odin Recipes</h1>
         <img class="main-img" src="./recipes/images/main.jpg" alt="A recipe book"> 
         <div class="recipes">
             <h2>Select Your Next Recipe Below!</h2>
