--- a/recipes/bakedspaghetti.html
+++ b/recipes/bakedspaghetti.html
@@ -3,39 +3,41 @@
     <head>
         <meta charset="utf-8">
         <title>iJonezi | Baked Spaghetti</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <h1>Baked Spaghetti</h1>
-        <img src="./images/bakedspaghetti.jpg" alt="A Photo of Baked Spaghetti" width="800" height="600">
-
-        <h4>Description:</h4>
-        <p>Comforting baked spaghetti recipe with plenty of melted cheese — the perfect dish for potlucks, family gatherings, or a weeknight dinner.</p>
+        <img class="spag-img" src="./images/bakedspaghetti.jpg" alt="A Photo of Baked Spaghetti" width="800" height="600">
+        <div class="spag-content">
+            <h4>Description:</h4>
+            <p>Comforting baked spaghetti recipe with plenty of melted cheese — the perfect dish for potlucks, family gatherings, or a weeknight dinner.</p>
         
-        <h4>Ingredients:</h4>
-        <ul>
-            <li>1 (16 Ounce) packed spaghetti</li>
-            <li>1lb ground beef</li>
-            <li>1 onion, chopped</li>
-            <li>1 (32 ounce) jar meatless spaghetti sauce</li>
-            <li>1/2 teaspoon seasoned salt</li>
-            <li>2 eggs</li>
-            <li>1/3 cup grated Parmesan cheese</li>
-            <li>5 tablespoons butter, melted, unsalted</li>
-            <li>2 cups small curd cottage cheese, divided</li>
-            <li>5 cups shredded mozzarella cheese, divided</li>
-        </ul>
+            <h4>Ingredients:</h4>
+            <ul>
+                <li>1 (16 Ounce) packed spaghetti</li>
+                <li>1lb ground beef</li>
+                <li>1 onion, chopped</li>
+                <li>1 (32 ounce) jar meatless spaghetti sauce</li>
+                <li>1/2 teaspoon seasoned salt</li>
+                <li>2 eggs</li>
+                <li>1/3 cup grated Parmesan cheese</li>
+                <li>5 tablespoons butter, melted, unsalted</li>
+                <li>2 cups small curd cottage cheese, divided</li>
+                <li>5 cups shredded mozzarella cheese, divided</li>
+            </ul>
 
-        <h4>Instructions:</h4>
-        <ol>
-            <li>Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a 9x13-inch baking dish.</li>
-            <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in boiling water, stirring occasionally, until tender but firm to the bite, about 12 minutes. Drain.</li>
-            <li>Heat a large skillet over medium heat. Cook and stir beef and onion in the hot skillet until meat is browned and onion is soft and translucent, about 7 minutes. Drain excess oil from the pan. Stir in spaghetti sauce and seasoned salt.</li>
-            <li>Whisk eggs, Parmesan, and butter in a large bowl. Add spaghetti and toss to coat.</li>
-            <li>Place 1/2 of the spaghetti mixture in the prepared dish. Top with 1/2 of the cottage cheese, 2 cups mozzarella, and 1/2 of meat sauce. Repeat layers. Cover with aluminum foil.</li>
-            <li>Bake in the preheated oven for 40 minutes. Remove the foil and sprinkle with remaining mozzarella. Continue to bake until cheese is melted and lightly browned, 20 to 25 minutes.</li>
-        </ol>
+            <h4>Instructions:</h4>
+            <ol>
+                <li>Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a 9x13-inch baking dish.</li>
+                <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in boiling water, stirring occasionally, until tender but firm to the bite, about 12 minutes. Drain.</li>
+                <li>Heat a large skillet over medium heat. Cook and stir beef and onion in the hot skillet until meat is browned and onion is soft and translucent, about 7 minutes. Drain excess oil from the pan. Stir in spaghetti sauce and seasoned salt.</li>
+                <li>Whisk eggs, Parmesan, and butter in a large bowl. Add spaghetti and toss to coat.</li>
+                <li>Place 1/2 of the spaghetti mixture in the prepared dish. Top with 1/2 of the cottage cheese, 2 cups mozzarella, and 1/2 of meat sauce. Repeat layers. Cover with aluminum foil.</li>
+                <li>Bake in the preheated oven for 40 minutes. Remove the foil and sprinkle with remaining mozzarella. Continue to bake until cheese is melted and lightly browned, 20 to 25 minutes.</li>
+            </ol>
+        </div>
 
-        <a href="../index.html">Return to the Main Page</a>
+        <a id="return-button" href="../index.html">Return to the Main Page</a>
     </body>
 </html>
