--- a/recipes/raspberryblackberry.html
+++ b/recipes/raspberryblackberry.html
@@ -3,28 +3,31 @@
     <head>
         <meta charset="utf-8">
         <title>iJonezi | Raspberry Blackberry Smoothie</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <h1>Raspberry Blackberry Smoothie</h1>
-        <img src="./images/raspberryblackberry.jpg" alt="Raspberry Blackberry Smoothie">
-        <h4>Description:</h4>
-        <p>A delicious smoothie!</p>
+        <img class="smoothie-img" src="./images/raspberryblackberry.jpg" alt="Raspberry Blackberry Smoothie">
+        <div class="smoothie-content">
+            <h4>Description:</h4>
+            <p>A delicious smoothie!</p>
 
-        <h4>Ingredients:</h4>
-        <ul>
-            <li>1 small banana</li>
-            <li>½ cup blackberries</li>
-            <li>1 cup fresh raspberries</li>
-            <li>1 (6 ounce) container vanilla yogurt</li>
-            <li>1 tablespoon honey</li>
-            <li>4 ice cubes</li>
-        </ul>
+            <h4>Ingredients:</h4>
+            <ul>
+                <li>1 small banana</li>
+                <li>½ cup blackberries</li>
+                <li>1 cup fresh raspberries</li>
+                <li>1 (6 ounce) container vanilla yogurt</li>
+                <li>1 tablespoon honey</li>
+                <li>4 ice cubes</li>
+            </ul>
 
-        <h4>Instructions:</h4>
-        <ol>
-            <li>Place banana, blackberries, raspberries, yogurt, honey, and ice cubes into a blender. Blend until smooth.</li>
-        </ol>
-        <a href="../index.html">Return to the Main Page</a>
+            <h4>Instructions:</h4>
+            <ol>
+                <li>Place banana, blackberries, raspberries, yogurt, honey, and ice cubes into a blender. Blend until smooth.</li>
+            </ol>
+        </div>
+        <a id="return-button" href="../index.html">Return to the Main Page</a>
     </body>
 </html>
