--- a/recipes/focacciapanzanella.html
+++ b/recipes/focacciapanzanella.html
@@ -3,40 +3,44 @@
     <head>
         <meta charset="utf-8">
         <title>iJonezi | Focaccia Panzanella</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <h1>Focaccia Panzanella</h1>
-        <img src="./images/focacciapanzanella.jpg" alt="A Completed Focaccia Panzanella" width="800" height="600">
+        <img class="panzanella-img" src="./images/focacciapanzanella.jpg" alt="A Completed Focaccia Panzanella" width="800" height="600">
 
-        <h4>Description:</h4>
-        <p>We are making this ancient and amazing Tuscan salad using a bread from Liguria. I'm guessing neither region would be crazy about this idea, but any geo-culinary issues aside, this salad is the ultimate way to use up fresh summer tomatoes and leftover bread.</p>
+        <div class="panzanella-content">
+            <h4>Description:</h4>
+            <p>We are making this ancient and amazing Tuscan salad using a bread from Liguria. I'm guessing neither region would be crazy about this idea, but any geo-culinary issues aside, this salad is the ultimate way to use up fresh summer tomatoes and leftover bread.</p>
 
-        <h4>Ingredients:</h4>
-        <ul>
-            <li>5 cups cubed focaccia bread</li>
-            <li>1 clove garlic, crushed</li>
-            <li>½ teaspoon white sugar</li>
-            <li>1 anchovy fillet (Optional)</li>
-            <li>⅓ cup red wine vinegar, or more to taste</li>
-            <li>⅓ cup extra-virgin olive oil, or to taste</li>
-            <li>3 vine-ripened tomatoes, cut into 1- to 2-inch pieces, or more to taste</li>
-            <li>1 pint cherry tomatoes, halved</li>
-            <li>salt and freshly ground black pepper to taste</li>
-            <li>⅔ cup sliced fresh mozzarella cheese (Optional)</li>
-            <li>¼ cup thinly sliced red onion</li>
-            <li>½ cup fresh basil leaves, torn into small pieces</li>
-        </ul>
+            <h4>Ingredients:</h4>
+            <ul>
+                <li>5 cups cubed focaccia bread</li>
+                <li>1 clove garlic, crushed</li>
+                <li>½ teaspoon white sugar</li>
+                <li>1 anchovy fillet (Optional)</li>
+                <li>⅓ cup red wine vinegar, or more to taste</li>
+                <li>⅓ cup extra-virgin olive oil, or to taste</li>
+                <li>3 vine-ripened tomatoes, cut into 1- to 2-inch pieces, or more to taste</li>
+                <li>1 pint cherry tomatoes, halved</li>
+                <li>salt and freshly ground black pepper to taste</li>
+                <li>⅔ cup sliced fresh mozzarella cheese (Optional)</li>
+                <li>¼ cup thinly sliced red onion</li>
+                <li>½ cup fresh basil leaves, torn into small pieces</li>
+            </ul>
 
-        <h4>Instructions:</h4>
-        <ol>
-            <li>Preheat the oven to 350 degrees F (175 degrees C). Line a baking sheet with parchment paper or a silicone baking mat.</li>
-            <li>Place bread cubes on the prepared baking sheet.</li>
-            <li>Toast bread in the preheated oven until browned and fully crisp, about 20 minutes. Remove from the oven and let cool down to room temperature.</li>
-            <li>Mash garlic, sugar, and anchovy into a coarse paste using the back of a fork. Add vinegar and oil; whisk until combined.</li>
-            <li>Toss vine-ripened tomatoes, cherry tomatoes, salt, and pepper into the dressing with a spatula. Let sit for 10 minutes.</li>
-            <li>Add mozzarella and red onion to the tomato mixture and toss with a spatula to combine. Add bread cubes and mix until saturated as desired. Mix in basil. Taste for seasoning before serving.</li>
-        </ol>
-        <a href="../index.html">Return to the Main Page</a>
+            <h4>Instructions:</h4>
+            <ol>
+                <li>Preheat the oven to 350 degrees F (175 degrees C). Line a baking sheet with parchment paper or a silicone baking mat.</li>
+                <li>Place bread cubes on the prepared baking sheet.</li>
+                <li>Toast bread in the preheated oven until browned and fully crisp, about 20 minutes. Remove from the oven and let cool down to room temperature.</li>
+                <li>Mash garlic, sugar, and anchovy into a coarse paste using the back of a fork. Add vinegar and oil; whisk until combined.</li>
+                <li>Toss vine-ripened tomatoes, cherry tomatoes, salt, and pepper into the dressing with a spatula. Let sit for 10 minutes.</li>
+                <li>Add mozzarella and red onion to the tomato mixture and toss with a spatula to combine. Add bread cubes and mix until saturated as desired. Mix in basil. Taste for seasoning before serving.</li>
+            </ol>
+        </div>
+
+        <a id="return-button" href="../index.html">Return to the Main Page</a>
     </body>
 </html>
