--- a/recipes/focacciapanzanella.html
+++ b/recipes/focacciapanzanella.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Focaccia Panzanella</h1>
-        <img class="panzanella-img" src="./images/focacciapanzanella.jpg" alt="A Completed Focaccia Panzanella" width="800" height="600">
+        <img src="./images/focacciapanzanella.jpg" alt="A Completed Focaccia Panzanella" width="800" height="600">
 
         <div class="panzanella-content">
             <h4>Description:</h4>
