--- a/recipes/raspberryblackberry.html
+++ b/recipes/raspberryblackberry.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Raspberry Blackberry Smoothie</h1>
-        <img class="smoothie-img" src="./images/raspberryblackberry.jpg" alt="Raspberry Blackberry Smoothie">
+        <img src="./images/raspberryblackberry.jpg" alt="Raspberry Blackberry Smoothie">
         <div class="smoothie-content">
             <h4>Description:</h4>
             <p>A delicious smoothie!</p>
