--- a/recipes/bakedspaghetti.html
+++ b/recipes/bakedspaghetti.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Baked Spaghetti</h1>
         <img src="./images/bakedspaghetti.jpg" alt="A Photo of Baked Spaghetti" width="800" height="600">
-        <div class="spag-content">
+        <div id="page-content">
             <h4>Description:</h4>
             <p>Comforting baked spaghetti recipe with plenty of melted cheese — the perfect dish for potlucks, family gatherings, or a weeknight dinner.</p>
         
