--- a/recipes/raspberryblackberry.html
+++ b/recipes/raspberryblackberry.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Raspberry Blackberry Smoothie</h1>
         <img src="./images/raspberryblackberry.jpg" alt="Raspberry Blackberry Smoothie">
-        <div class="smoothie-content">
+        <div id="page-content">
             <h4>Description:</h4>
             <p>A delicious smoothie!</p>
 
